--- a/resources/assets/sass/admin/_forms.scss
+++ b/resources/assets/sass/admin/_forms.scss
@@ -96,6 +96,8 @@ textarea.form-control {
     opacity:    0.5;
     transition: 0.2s;
     padding:    0;
+    border:     none;
+    background-color: transparent;
 }
 
 
